--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/cake.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/cake.yml
@@ -786,5 +786,5 @@
     - Slice
   - type: FoodSequenceElement
     entries:
-      taco: Suppermatter
-      burger: SuppermatterBurger
+      Taco: Suppermatter
+      Burger: SuppermatterBurger
