--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/burger.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/burger.yml
@@ -82,7 +82,7 @@
           Quantity: 3.3 # 1/2 of a bun
   - type: FoodSequenceElement
     entries:
-      burger: BunTopBurger
+      Burger: BunTopBurger
   
 # Base
 
