--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -127,7 +127,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 5
+    weight: 7 # lower because freelance, but plays well with other antags so lil higher
   - type: LoadMapRule
     preloadedGrid: Bang
 
@@ -184,6 +184,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 5 # Its just a big ship, so it needs to be rarer to be interesting.
   - type: LoadMapRule
     preloadedGrid: Gym
 
@@ -193,7 +194,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 5 # lower because freelance roles
+    weight: 7 # lower because freelance, but plays well with other antags so lil higher
   - type: LoadMapRule
     preloadedGrid: Hook
 
@@ -243,7 +244,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #Leaving this one because theyre like primitives and its funnier
-    weight: .5 # lower because antags
+    weight: 1 # lower because antags
     earliestStart: 50 # late to hopefully have enough ghosts to fill all roles quickly. (4) & antags
   - type: LoadMapRule
     preloadedGrid: ManOWar
@@ -263,8 +264,8 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 12 # this is higher because its just a little generic personal shuttle
-    maxOccurrences: 10
+    weight: 11 # this is higher because its just a little generic personal shuttle
+    maxOccurrences: 4
   - type: LoadMapRule
     preloadedGrid: Microshuttle
 
@@ -274,7 +275,7 @@
   components:
   - type: StationEvent
     startAnnouncement: null #dont nark on antags
-    weight: .5 # lower because antags & because its the Drone but better
+    weight: 1 # lower because antags & because its the Drone but better
     earliestStart: 45 # late to hopefully have enough ghosts to fill all roles quickly.
   - type: LoadMapRule
     preloadedGrid: Raider
