--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1465,7 +1465,7 @@
   - type: FoodSequenceElement
     entries:
       Taco: Lingzhi
-      Burger: LingzhiBurger
+      Burger: Lingzhi
 
 - type: entity
   name: ambrosia vulgaris
