--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -35,7 +35,7 @@
     - ActionJumpToCore
     - ActionShowJobIcons
     - ActionSurvCameraLights
-    - ActionViewLaws
+    - ActionAIViewLaws
   - type: UserInterface
     interfaces:
       enum.RadarConsoleUiKey.Key:
@@ -49,62 +49,12 @@
   - type: IntrinsicUI
     uis:
       enum.RadarConsoleUiKey.Key:
-        toggleAction: ActionAGhostShowRadar
+        toggleAction: ActionAIShowRadar
       enum.CrewMonitoringUIKey.Key:
-        toggleAction: ActionAGhostShowCrewMonitoring
+        toggleAction: ActionAIShowCrewMonitoring
       enum.GeneralStationRecordConsoleKey.Key:
-        toggleAction: ActionAGhostShowStationRecords
+        toggleAction: ActionAIShowStationRecords
 
-# Actions
-- type: entity
-  id: ActionJumpToCore
-  name: Jump to core
-  description: Sends your eye back to the core.
-  components:
-  - type: InstantAction
-    itemIconStyle: BigAction
-    icon:
-      sprite: Interface/Actions/actions_ai.rsi
-      state: ai_core
-    event: !type:JumpToCoreEvent
-
-- type: entity
-  id: ActionShowJobIcons
-  name: Show job icons
-  description: Shows job icons for crew members.
-  components:
-  - type: InstantAction
-    itemIconStyle: BigAction
-    icon:
-      sprite: Interface/Misc/job_icons.rsi
-      state: Captain
-    event: !type:ActionComponentChangeEvent
-      components:
-      - type: ShowJobIcons
-
-- type: entity
-  id: ActionSurvCameraLights
-  name: Toggle camera lights
-  description: Enable surveillance camera lights near wherever you're viewing.
-  components:
-  - type: InstantAction
-    itemIconStyle: BigAction
-    icon:
-      sprite: Interface/Actions/actions_ai.rsi
-      state: camera_light
-    event: !type:RelayedActionComponentChangeEvent
-      components:
-      - type: LightOnCollideCollider
-      - type: FixturesChange
-        fixtures:
-          lightTrigger:
-            shape:
-              !type:PhysShapeCircle
-              radius: 0.35
-            density: 80
-            hard: false
-            layer:
-            - GhostImpassable
 
 # Ai
 - type: entity
