Added custom recruiter ID, redid ship to sit properly on preloadgrid, other tweaks

--- a/Resources/Prototypes/DeltaV/Entities/Markers/Spawners/ghost_roles.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Markers/Spawners/ghost_roles.yml
@@ -25,6 +25,8 @@
   categories: [ HideSpawnMenu, Spawner ]
   parent: BaseAntagSpawner
   id: SpawnPointGhostRecruiter
+  name: ghost role spawn point
+  suffix: Syndicate Recruiter
   components:
   - type: GhostRole
     name: ghost-role-information-recruiter-name
