--- a/Resources/Prototypes/Shuttles/shuttle_incoming_event.yml
+++ b/Resources/Prototypes/Shuttles/shuttle_incoming_event.yml
@@ -27,3 +27,8 @@
   id: SyndieEvacPod
   path: /Maps/Shuttles/ShuttleEvent/syndie_evacpod.yml
   copies: 2
+
+- type: preloadedGrid
+  id: SyndieRecruiterShip
+  path: /Maps/Shuttles/ShuttleEvent/recruiter.yml
+  copies: 1
